--- a/rekenlogboek/client-side/src/scss/common/logbook/TopBar.scss
+++ b/rekenlogboek/client-side/src/scss/common/logbook/TopBar.scss
@@ -4,7 +4,7 @@
 	display: grid;
 	grid-column: span 4;
 	grid-template-columns: repeat(auto-fit, calc(100% / 4));
-	height: 20%;
+	height: 12.5vh;
 	grid-row: span 1;
 	margin: auto;
 	padding: 0;
